# dayz-server-manager-rs

./: .gitignore  Cargo.toml  Justfile  README.md  banner.ascii  config.toml
defaults/: config.toml  manager.cfg  modslist.csv  serverDZ.cfg
src/: cli.rs  collection_fetcher.rs  collection_parser.rs  lock.rs  main.rs  mods.rs  server.rs  steamcmd.rs  steamcmd2.rs
src/config/: config.rs  mod.rs  mod_entry.rs  mods_config.rs  server_config.rs
src/ui/: banner.rs  mod.rs  prompt.rs  status.rs
