[package]
name = "dzsm"
description = "A DayZ server manager for downloading, updating, and running DayZ servers with mod support"
version = "0.1.0"
edition = "2024"
authors = ["Matthew Green <work@matthewgreen.gg>"]
license-file = "LICENSE"
repository = "https://github.com/greenmatthew/dayz-server-manager-rs"
keywords = ["dayz", "server", "manager", "gaming", "steamcmd"]
categories = ["games", "command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
curl = "0.4.47"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
term_size = "0.3.2"
toml = "0.8.22"
zip = "4.0.0"
